docs: iitsrc fix latex error and create submission

--- a/docs/iitsrc/main.tex
+++ b/docs/iitsrc/main.tex
@@ -21,8 +21,6 @@
     urlcolor=cyan,
 }
 
-\newcommand{\DOUBLEBLIND}{}   
-
 \title{Practical usage of Zero-knowledge in different use-cases in blockchains} 
 
 \author{\IEEEauthorblockN{Lukáš Častven}
@@ -32,9 +30,7 @@
         Bratislava, Slovakia\\
         xcastven@stuba.sk
     }
-}
-
-\maketitle
+}\maketitle
 
 \begin{abstract}
     Zero Knowledge Proofs (ZKP) are a cryptographic primitives enabling a
@@ -547,5 +543,6 @@
     \bibitem{SassonIOPs} E. Ben-Sasson, A. Chiesa, and N. Spooner, Interactive Oracle Proofs. Cryptology ePrint Archive, Paper 2016/116, 2016. [Online]. Available: https://eprint.iacr.org/2016/116
     \bibitem{umbra} Umbra — app.umbra.cash. https://app.umbra.cash/. [Online]. Available: https://app.umbra.cash/
     \bibitem{nocturne} Nocturne — nocturne.xyz. https://nocturne.xyz/. [Online]. Available: https://nocturne.xyz/
+\end{thebibliography}
 
 \end{document}
