--- a/docs/iitsrc-poster/refs.bib
+++ b/docs/iitsrc-poster/refs.bib
@@ -1,25 +1,33 @@
-%% Put here reference entries
-
-@article {knuth1981,
-author = {Knuth, Donald E. and Plass, Michael F.},
-title = {Breaking paragraphs into lines},
-journal = {Software: Practice and Experience},
-volume = {11},
-number = {11},
-pages = {1119--1184},
-year = {1981},
-}
-
-@book{knuth1986,
- author = {Knuth, Donald E.},
- title = {The TeXbook},
- year = {1986},
- publisher = {Addison-Wesley Professional},
-}
-
-@book{lamport1994,
- author = {Lamport, Leslie},
- title = {LaTeX: A Document Preparation System},
- year = {1994},
- publisher = {Addison-Wesley Professional; 2nd Edition},
+@article{Goldwasser1989,
+  title     = {The Knowledge Complexity of Interactive Proof Systems},
+  volume    = {18},
+  issn      = {1095-7111},
+  url       = {http://dx.doi.org/10.1137/0218012},
+  doi       = {10.1137/0218012},
+  number    = {1},
+  journal   = {SIAM Journal on Computing},
+  publisher = {Society for Industrial & Applied Mathematics (SIAM)},
+  author    = {Goldwasser,  Shafi and Micali,  Silvio and Rackoff,  Charles},
+  year      = {1989},
+  month     = feb,
+  pages     = {186-208}
 } 
+
+@article{goldreich1991proofs,
+  title     = {Proofs that yield nothing but their validity or all languages in NP have zero-knowledge proof systems},
+  author    = {Goldreich, Oded and Micali, Silvio and Wigderson, Avi},
+  journal   = {Journal of the ACM (JACM)},
+  volume    = {38},
+  number    = {3},
+  pages     = {690--728},
+  year      = {1991},
+  publisher = {ACM New York, NY, USA}
+}
+
+@misc{ButerinIncompleteGuide,
+  author       = {},
+  title        = { {A}n incomplete guide to stealth addresses  --- vitalik.eth.limo},
+  howpublished = {https://vitalik.eth.limo/general/2023/01/20/stealth.html}},
+  year         = {},
+  note         = {[Accessed 12-12-2023]}
+}
