docs: revise design and proof in bachelor

--- a/docs/bachelor/content/design.tex
+++ b/docs/bachelor/content/design.tex
@@ -128,7 +128,7 @@ and was inspired by the work of Vitalik Buterin\cite{ButerinIncompleteGuide}.
 
 \begin{figure}[h]
     \centering
-    \includegraphics[scale=0.15]{assets/images/solution.png}
+    \includegraphics[width=\textwidth]{assets/images/high-level-flow.png}
     \caption{Solution Design}
 	\cite{ButerinIncompleteGuide}
     \label{fig:solution}
