--- a/docs/bachelor/pages/time_schedule.tex
+++ b/docs/bachelor/pages/time_schedule.tex
@@ -33,7 +33,7 @@
 \hline
 5\textsuperscript{th}-7\textsuperscript{th} week    & Implementing smart contracts in Solidity  \\
 \hline
-8\textsuperscript{th}-9\textsuperscript{th} week    & Implementing CLI experimentation wallet  \\
+8\textsuperscript{th}-9\textsuperscript{th} week    & Implementing browser experimentation wallet  \\
 \hline
 10\textsuperscript{th}-11\textsuperscript{th} week  & Solution testing  \\
 \hline
