docs: add implementation to bachelor doc

--- a/docs/bachelor/bibliography.bib
+++ b/docs/bachelor/bibliography.bib
@@ -128,6 +128,7 @@
 	year 			= {},
 	note 			= {[Accessed 19-12-2023]},
 }
+
 @misc{ethereumERC5564Stealth,
 	author 			= {},
 	title 			= {{E}{R}{C}-5564: {S}tealth {A}ddresses --- eips.ethereum.org},
@@ -222,3 +223,92 @@
 	year = {},
 	note = {[Accessed 25-02-2024]},
 }
+@misc{circomCircomDocumentation,
+	author = {},
+	title = {{C}ircom 2 {D}ocumentation --- docs.circom.io},
+	howpublished = {\url{https://docs.circom.io/}},
+	year = {},
+	note = {[Accessed 01-04-2024]},
+}
+
+@misc{snarkjs,
+	author = {},
+	title = {{G}it{H}ub - iden3/snarkjs: zk{S}{N}{A}{R}{K} implementation in {J}ava{S}cript \& {W}{A}{S}{M} --- github.com},
+	howpublished = {\url{https://github.com/iden3/snarkjs}},
+	year = {},
+	note = {[Accessed 02-04-2024]},
+}
+
+@InProceedings{PowersOfTau,
+    author="Nikolaenko, Valeria
+    and Ragsdale, Sam
+    and Bonneau, Joseph
+    and Boneh, Dan",
+    editor="P{\"o}pper, Christina
+    and Batina, Lejla",
+    title="Powers-of-Tau to the People: Decentralizing Setup Ceremonies",
+    booktitle="Applied Cryptography and Network Security",
+    year="2024",
+    publisher="Springer Nature Switzerland",
+    address="Cham",
+    pages="105--134",
+    abstract="We propose several decentralized ceremonies for constructing a powers-of-tau structured reference string (SRS). Our protocols make use of a blockchain platform to run in a permissionless manner, where anyone can contribute randomness in exchange for paying the requisite transaction fees. The resulting SRS is secure as long as any single party participates honestly. We introduce several protocols optimized for different sized powers-of-tau setups and using an on-chain or off-chain data availability model to store the resulting string. We implement our most efficient protocol on top of Ethereum, demonstrating practical concrete performance.",
+    isbn="978-3-031-54776-8"
+}
+
+@misc{PerpetualPTAU,
+	author = {},
+	title = {{G}it{H}ub - privacy-scaling-explorations/perpetualpowersoftau: {P}hase 1 of a multi-party trusted setup ceremony for zk-{S}{N}{A}{R}{K}s --- github.com},
+	howpublished = {\url{https://github.com/privacy-scaling-explorations/perpetualpowersoftau}},
+	year = {},
+	note = {[Accessed 02-04-2024]},
+}
+
+@misc{solidjs,
+	author = {},
+	title = {{S}olid{J}{S} --- solidjs.com},
+	howpublished = {\url{https://www.solidjs.com/}},
+	year = {},
+	note = {[Accessed 02-04-2024]},
+}
+
+@misc{web3js,
+	author = {},
+	title = {{W}eb3.js; {J}avascript {E}thereum {A}{P}{I} --- web3js.org},
+	howpublished = {\url{https://web3js.org/}},
+	year = {},
+	note = {[Accessed 02-04-2024]},
+}
+
+@misc{infura,
+	author = {},
+	title = {{I}nfura},
+	howpublished = {\url{https://www.infura.io/}},
+	year = {},
+	note = {[Accessed 02-04-2024]},
+}
+
+@misc{foundry,
+	author = {},
+	title = {{F}oundry {B}ook --- book.getfoundry.sh},
+	howpublished = {\url{https://book.getfoundry.sh/}},
+	year = {},
+	note = {[Accessed 02-04-2024]},
+}
+
+@misc{sepolia,
+	author = {},
+	title = {{N}etworks | ethereum.org --- ethereum.org},
+	howpublished = {\url{https://ethereum.org/en/developers/docs/networks/\#sepolia}},
+	year = {},
+	note = {[Accessed 02-04-2024]},
+}
+
+@misc{solidity,
+	author = {},
+	title = {{H}ome | {S}olidity {P}rogramming {L}anguage --- soliditylang.org},
+	howpublished = {\url{https://soliditylang.org/}},
+	year = {},
+	note = {[Accessed 02-04-2024]},
+}
+
