--- a/docs/bachelor/main.tex
+++ b/docs/bachelor/main.tex
@@ -78,6 +78,8 @@
 
     \include{content/proof}
 
+    \include{content/implementation}
+
     \include{content/conclusion}
 
     % \include{content/future}
