--- a/docs/bachelor/packages.tex
+++ b/docs/bachelor/packages.tex
@@ -32,6 +32,7 @@
 \usepackage{tikz}
 \usepackage{tocloft}
 \usepackage{amsfonts}
+\usepackage{booktabs}
 
 % Remove unnecessary gap between paragraph if large figure is inserted after them
 \raggedbottom
