docs: cite new sources

--- a/docs/bachelor/bibliography.bib
+++ b/docs/bachelor/bibliography.bib
@@ -223,6 +223,32 @@
 	year = {},
 	note = {[Accessed 25-02-2024]},
 }
+
+@misc{SassonIOPs,
+      author = {Eli Ben-Sasson and Alessandro Chiesa and Nicholas Spooner},
+      title = {Interactive Oracle Proofs},
+      howpublished = {Cryptology ePrint Archive, Paper 2016/116},
+      year = {2016},
+      note = {\url{https://eprint.iacr.org/2016/116}},
+      url = {https://eprint.iacr.org/2016/116}
+}
+
+@misc{nocturne,
+	author = {},
+	title = {{N}octurne --- nocturne.xyz},
+	howpublished = {\url{https://nocturne.xyz/}},
+	year = {},
+	note = {[Accessed 01-04-2024]},
+}
+
+@misc{umbra,
+	author = {},
+	title = {{U}mbra --- app.umbra.cash},
+	howpublished = {\url{https://app.umbra.cash/}},
+	year = {},
+	note = {[Accessed 01-04-2024]},
+}
+
 @misc{circomCircomDocumentation,
 	author = {},
 	title = {{C}ircom 2 {D}ocumentation --- docs.circom.io},
@@ -312,3 +338,29 @@
 	note = {[Accessed 02-04-2024]},
 }
 
+@misc{Yu2020,
+      author = {Gary Yu},
+      title = {Blockchain Stealth Address Schemes},
+      howpublished = {Cryptology ePrint Archive, Paper 2020/548},
+      year = {2020},
+      note = {\url{https://eprint.iacr.org/2020/548}},
+      url = {https://eprint.iacr.org/2020/548}
+}
+
+@inproceedings{FanJiaWang2019,
+    author = {Fan, Jia and Wang, Zhen and Luo, Yili and Bai, Jian and Li, Yarong and Hao, Yao},
+    title = {A new stealth address scheme for blockchain},
+    year = {2019},
+    isbn = {9781450371582},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    url = {https://doi.org/10.1145/3321408.3321573},
+    doi = {10.1145/3321408.3321573},
+    abstract = {Stealth address has been an effective way to protect privacy of users in blockchain. However, most of the existing schemes either require their users to bear extra storage costs to manage keys, or need one more private communication before each transaction. To overcome these drawbacks, we proposed a new kind of stealth addresses scheme in which a user only needs to keep a single key pair for initial certificate, the user only stores his or her initial key pair for all transactions. In our scheme, when a sender initiates a transaction, he or she creates a one-time transaction address, then the sender attaches it to the transaction. The receiver uses his or her private key to check the transaction from the blockchain, no private channel is needed for each transaction. Considering regulatory issues, transactions can be wholly or partially regulated, depending on security requirements. Finally, we provide provable security analysis to ensure the security of our scheme, and our simulation results show that our scheme is also efficient and practical in computation.},
+    booktitle = {Proceedings of the ACM Turing Celebration Conference - China},
+    articleno = {67},
+    numpages = {7},
+    keywords = {blockchain, privacy, regulation, stealth address, traceability},
+    location = {Chengdu, China},
+    series = {ACM TURC '19}
+}
