--- a/docs/bachelor/content/analysis.tex
+++ b/docs/bachelor/content/analysis.tex
@@ -317,7 +317,7 @@ from which senders can generate a new stealth address. This new stealth address
 can not be linked to the meta stealth address, and thus the recipient's identity
 is protected. Additionally, senders must publish some information, which allows
 the recipient to gain control over stealth address to which the sender
-sent funds.
+sent funds\cite{Yu2020}.
 
 ZKPs can be used to prove that the recipient owns the stealth address, and
 thus can spend the funds. The proof can be sent from any address, but only
