--- a/docs/bachelor/main.tex
+++ b/docs/bachelor/main.tex
@@ -80,9 +80,9 @@
 
     \include{content/implementation}
 
-    \include{content/conclusion}
+    \include{content/related}
 
-    % \include{content/future}
+    \include{content/conclusion}
 
     \ifx\FIITlagEN\undefined
     \else
