docs: add document structure in introduction

--- a/docs/bachelor/content/analysis.tex
+++ b/docs/bachelor/content/analysis.tex
@@ -1,4 +1,4 @@
-\chapter{Analysis}
+\chapter{Analysis}\label{chapter:analysis}
 
 The analysis section of the thesis starts with demonstration of interactive
 proofs with goal to build up intuition behind interactive proofs \cite{Goldwasser1989,youtubeMOOCLecture1}.
