--- a/docs/bachelor/content/design.tex
+++ b/docs/bachelor/content/design.tex
@@ -1,4 +1,4 @@
-\chapter{Solution Design}
+\chapter{Solution Design}\label{chapter:solution}
 
 The Solution Design section outlines the design of a stealth address
 scheme using ZKPs for the Ethereum blockchain. The scenario which is being
