--- a/docs/bachelor/content/proof.tex
+++ b/docs/bachelor/content/proof.tex
@@ -1,4 +1,4 @@
-\chapter{Discussion on security}
+\chapter{Discussion on security}\label{chapter:security}
 
 In this chapter, the security of the Stealth Address ZKP Scheme is informally discussed.
 
