--- a/docs/bachelor/content/related.tex
+++ b/docs/bachelor/content/related.tex
@@ -1,4 +1,4 @@
-\chapter{Related work}
+\chapter{Related work}\label{chapter:related}
 
 With the growth of cryptocurrencies, ZKPs have gained a substantial popularity
 not only in academic circles, but also in the startup and venture capital
