--- a/docs/bachelor/bibliography.bib
+++ b/docs/bachelor/bibliography.bib
@@ -1,3 +1,11 @@
+@misc{ethereumEthereumVirtual,
+	author = {},
+	title = {{E}thereum {V}irtual {M}achine ({E}{V}{M}) | ethereum.org --- ethereum.org},
+	howpublished = {\url{https://ethereum.org/en/developers/docs/evm/}},
+	year = {},
+	note = {[Accessed 16-05-2024]},
+}
+
 @article{Goldwasser1989,
   title     = {The Knowledge Complexity of Interactive Proof Systems},
   volume    = {18},
@@ -364,3 +372,4 @@
     location = {Chengdu, China},
     series = {ACM TURC '19}
 }
+
