docs: move related work after analysis

--- a/docs/bachelor/bibliography.bib
+++ b/docs/bachelor/bibliography.bib
@@ -373,3 +373,13 @@
     series = {ACM TURC '19}
 }
 
+@misc{Kovacs2023,
+  doi = {10.48550/ARXIV.2308.01703},
+  url = {https://arxiv.org/abs/2308.01703},
+  author = {Kovács,  Alex and Seres,  István András},
+  keywords = {Cryptography and Security (cs.CR),  FOS: Computer and information sciences,  FOS: Computer and information sciences},
+  title = {Anonymity Analysis of the Umbra Stealth Address Scheme on Ethereum},
+  publisher = {arXiv},
+  year = {2023},
+  copyright = {Creative Commons Attribution 4.0 International}
+}
