--- a/docs/bachelor/content/introduction.tex
+++ b/docs/bachelor/content/introduction.tex
@@ -59,14 +59,15 @@ address ownership.
 
 The rest of this thesis is structured as follows. Chapter \ref{chapter:analysis}
 contains an in-depth analysis of the cryptographic principles that underpin ZKPs,
-and how they can be utilized to construct a stealth address scheme. Chapter
+and how they can be utilized to construct a stealth address scheme.
+ Chapter \ref{chapter:related} explores related work in the field, highlighting
+existing research and projects that have contributed to the development of ZKPs and
+stealth addresses. Chapter
 \ref{chapter:solution} describes the design of the solution, explaining the process
 of how the stealth address scheme is implemented. Chapter \ref{chapter:security}
 discusses the security considerations of the ZKP stealth address scheme, listing
 the assumptions made and potential vulnerabilities. Chapter \ref{chapter:implementation}
 outlines the implementation details of the scheme, covering the tools and technologies
-used. Chapter \ref{chapter:related} explores related work in the field, highlighting
-existing research and projects that have contributed to the development of ZKPs and
-stealth addresses. Finally, Chapter \ref{chapter:conclusion} concludes the thesis by
+used.Finally, Chapter \ref{chapter:conclusion} concludes the thesis by
 summarizing the findings and proposing potential avenues for future work.
 
